--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <!--end of testimonial-section -->
     <section class="courses-section">
       <div class="wrapper">
-        <h2 class="light">Our Courses</h2>
+        <h2 class="courses">Our Courses</h2>
         <div class="course-cards">
           <div class="course-card">
             <img src="assets/images/course1.png" alt="course1" />
